Update handler, use new on message method, add more commands
The handler automatically picks up all commands from the ./commands directory and inserts them into an object. They are then accessed in the on normal chat message type event to check if a command should be triggered.

The types are available in client.types as an object containing all chat and role types.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Using the trovobot library to create a bot",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,6 @@
   },
   "homepage": "https://github.com/Snothy/trovobot_template#readme",
   "dependencies": {
-    "puppeteer": "^11.0.0",
-    "ws": "^8.2.3"
+    "trovobot": "^1.0.5"
   }
 }
